@@ -1,3 +1,8 @@
+2009-08-27  Ulrich Mueller  <ulm@gentoo.org>
+
+	* gentoo-syntax.el (ebuild-mode-eclasses): New variable.
+	(ebuild-mode-insert-skeleton): Ask for inherited eclasses.
+
 2009-08-27  Christian Faulhammer  <fauli@gentoo.org>
 
 	* gentoo-syntax.texi (Functions): Describe ekeyword syntax usage
